<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:id="@+id/history_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:maxEms="6"
        android:ellipsize="end"
        android:text="@string/trade_name"
        android:textColor="@color/black"
        android:textSize="13dp"
        android:layout_weight="3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/sale_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/product_name"
            android:text="@string/outlet_price"
            android:textSize="13dp"
            android:layout_weight="1"
            android:gravity="right"/>

        <TextView
            android:id="@+id/profit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profit"
            android:textSize="13dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="right"/>

        <TextView
            android:id="@+id/final_price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trade_price"
            android:textSize="13dp"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_marginRight="5dp"/>
    </LinearLayout>
    </LinearLayout>

</RelativeLayout>
