<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.utoo.ezgotool.MainActivity$PlaceholderFragment"
    android:id="@+id/fragment_history">

    <LinearLayout
        android:id="@+id/history_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxEms="6"
            android:ellipsize="end"
            android:text="@string/trade_name"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:textSize="10dp"
            android:layout_weight="3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:id="@+id/sale_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/outlet_price"
                android:layout_marginLeft="20dp"
                android:textSize="10dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/profit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/profit"
                android:textSize="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"/>

            <TextView
                android:id="@+id/final_price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/trade_price"
                android:textSize="10dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/history_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/history_list_title">

    </ListView>

</RelativeLayout>
