<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="5dp"
    tools:context="com.utoo.ezgotool.MainActivity$PlaceholderFragment">

    <LinearLayout
        android:id="@+id/discribe_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/trade_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trade_name" />

            <EditText
                android:id="@+id/trade_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true" />
        </LinearLayout>

        <!--<ImageButton-->
        <!--android:id="@+id/add_data"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="40dp"-->
        <!--android:layout_marginLeft="15dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_weight="4"-->
        <!--android:background="@color/colorAccent"-->
        <!--android:src="@drawable/ic_action_add"-->
        <!--android:textSize="30dp"-->
        <!--android:textColor="@color/white" />-->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/price_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/discribe_layout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/import_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/import_price" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/outlet_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outlet_price" />

            <TextView
                android:id="@+id/pre_outlet_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:textColor="@color/black"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/price_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/price_text_layout"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/import_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/import_text"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/outlet_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/import_text"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/exchange_rate_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/price_layout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/exchange_rate_now_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exchange_rate_now" />

        <TextView
            android:id="@+id/exchange_rate_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exchange_rate" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/exchange_rate_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/exchange_rate_text_layout"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/exchange_rate_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:singleLine="true" />

        <EditText
            android:id="@+id/exchange_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/calculate_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/exchange_rate_layout"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/express_fee_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/express_fee" />

            <EditText
                android:id="@+id/express_fee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/express_fee_text"
                android:inputType="numberDecimal"
                android:singleLine="true" />

        </LinearLayout>

        <Button
            android:id="@+id/calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/exchange_rate_layout"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/calculate"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/trade_price_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/calculate_layout"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/trade_price_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trade_price" />

                <TextView
                    android:id="@+id/pre_trade_price_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <EditText
                android:id="@+id/trade_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:singleLine="true" />

        </LinearLayout>

        <Button
            android:id="@+id/reverse_profit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="2"
            android:background="@color/colorAccent"
            android:text="@string/reverse_profit"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/trade_price_layout"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/profit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/trade_price_layout"
                    android:text="@string/profit" />

                <TextView
                    android:id="@+id/pre_profit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:textColor="@color/black"/>

            </LinearLayout>


            <EditText
                android:id="@+id/profit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:singleLine="true" />

        </LinearLayout>

        <Button
            android:id="@+id/reverse_outlet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="2"
            android:background="@color/colorAccent"
            android:text="@string/reverse_outlet"
            android:textColor="@color/white" />
    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_action_add"
        app:fabSize="mini"
        android:padding="10dp"/>

</RelativeLayout>
